fix scrolling on ios

--- a/src/styles.less
+++ b/src/styles.less
@@ -9,6 +9,7 @@ html, body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  padding: 30px;
 }
 
 .mat-mdc-nav-list a.active {
